# Data-Structures

./: CMakeLists.txt  Makefile  README.md  avltree.c  bstree.c  btree.c  dlist.c  dll.c  graph.c  hashmap.c  heap.c  heap.cc  huffman.cc  list.c  qsort.c  qsort.cc  queue.c  rbtree.c  trie.c
avl/: Makefile  README.md  avl
avl_tree/: Makefile  main.cpp
binary_search_tree/: Makefile  bst.c  main.c
bst/: Makefile  bst.c
doubly_linked_list/: main.c  main.dot
graph_adj_mtx/: Makefile  graph.c  graph.h  hash.c  main.c
hash_table/: Linked_List.c  Linked_List.h  handle_files.c  hash_table.c  hash_table.h  main.c
heap/: Makefile  heap_draw.cpp  heap_draw.hpp  heap_functions.cpp  main.cpp
ht/: Makefile  main.c  out.txt
huffman/: main.cc  makefile  meson.build
linked_list/: ll.c  main.dot
prefix-tree/: main.c
quick_sort_iterative/: main.cpp
quick_sort_iterative/src/: quick_sort.cpp  quick_sort_functions.cpp
trie/: main.c  output.txt
